# bitmoji-picker

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.jsx  index.css  main.jsx  token-file.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CopiedNotification.jsx  LogInPage.jsx  LogOut.jsx  SearchBox.jsx  Stickers.jsx
