[package]
name = "bitmoji-picker"
version = "1.0.0"
description = "Use any Bitmoji sticker right from your desktop"
authors = ["CriShoux"]
license = ""
repository = ""
default-run = "bitmoji-picker"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["fs-create-dir", "fs-exists", "fs-read-file", "fs-remove-file", "fs-write-file"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]